k8s/observability/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: observability
  annotations:
    cert-manager.io/cluster-issuer: local-ca
    nginx.org/http-redirect-code: "308"
    nginx.org/basic-auth-secret: gateway-htpasswd
    nginx.org/basic-auth-realm: fraudstream
    nginx.org/limit-req-rate: "60r/s"
    nginx.org/limit-req-burst: "200"
    nginx.org/limit-req-no-delay: "true"
    nginx.org/limit-req-reject-code: "429"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.fraudstream.localhost
      secretName: grafana-tls
  rules:
    - host: grafana.fraudstream.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: observability
  annotations:
    cert-manager.io/cluster-issuer: local-ca
    nginx.org/http-redirect-code: "308"
    nginx.org/basic-auth-secret: gateway-htpasswd
    nginx.org/basic-auth-realm: fraudstream
    nginx.org/limit-req-rate: "60r/s"
    nginx.org/limit-req-burst: "200"
    nginx.org/limit-req-no-delay: "true"
    nginx.org/limit-req-reject-code: "429"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jaeger.fraudstream.localhost
      secretName: jaeger-tls
  rules:
    - host: jaeger.fraudstream.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
